# env-rhizo

./: .bashrc  .gitignore  .gitmodules  .zshrc  alias.sh  asko  backup-drives  brew-installs.sh  conda-ergonomics.sh  eastwood.zsh-theme  env-mac.sh  env-ubuntu.sh  env.sh  main.py  narrative.sh  obsid  prompt.sh  pyproject.toml  readme.md  zsh-ergonomics.sh  zshrc.sh
completions/: git-completion.bash  hasura-completion.bash
setup/: backup-drives  brew-installs.sh  conda.sh  conda_louie.sh  drive-setup.sh  mac-default-open-setup.sh  pull-msi-drivers.sh  ubuntu-config.sh  uv.sh
ubuntu/: kinto.py
